<resources>

    <string name="app_name">Carrot</string>
    
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_main">Carrot</string>
    <string name="AppName">Carrot</string>
    
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    <string name="my_qr_title">QR</string>
    <string name="pref_app_what_title">What is Carrot?</string>
    
    <string name="sex_female">Female</string>
    <string name="sex_male">Male</string>
    <string name="sex_etc">Private setting</string>
    <string name="password_main">Enter password.</string>
    <string name="certi_step1_btn1">Request authorization code.</string>
    <string name="certi_step1_help1">Enter phone number.</string>
    <string name="certi_fail_msg">Due to error authorization failed.</string>
    <string name="certi_step2_btn1">Authorization confirmed.</string>
    <string name="scan_qr_message">Automatically detect barcode.</string>
    <string name="no_qr_create">Click here if you want to create QR code.</string>
    <string name="no_qr_scan">Click here with QR card that you received it from participant store.</string>
    <string name="my_qr_help1">Scan QR code with store iPad.\nIt will automatically earn mileage.</string>
    <string name="my_mileage_title">Mileage</string>
    <string name="last_update">Last update</string>
    <string name="member_store_list_title">Search participant store</string>
    <string name="error_occured">occurs error</string>
    <string name="representative">Representative</string>
    <string name="phone_num">Phone number</string>
    <string name="addr">Address</string>
    <string name="pr_str">Introduce</string>
    <string name="shop_name">Name of participant store </string>
    <string name="settings_user_info">User information</string>
    <string name="settings_basic_info">Basic information</string>
    <string name="settings_get_gcm_summary">Notification alert setting.</string>
    <string name="settings_get_gcm_y">I do want to receive notification from server.</string>
    <string name="settings_get_gcm_n">I do not want to receive notification from server.</string>
    <string name="settings_get_gcm_title">Notification alert </string>
    <string name="settings_user_info_title">Personal information setting</string>
    <string name="settings_user_info_summary">Personal information setting</string>
    <string name="settings_lock_settings">Password lock</string>
    <string name="pref_app_qna">FAQ</string>
    <string name="pref_app_notify">Important announcement</string>
    <string name="pref_app_terms">Terms and Condition</string>
    <string name="pref_app_privacy">Privacy Policy</string>
    <string name="pref_app_leave_summary">Leave permanently?</string>
    <string name="pref_app_leave_title">Leave permanently</string>
    <string name="pref_push_list_summary">View event notification list</string>
    <string name="pref_push_list_title">Event</string>
    <string name="pref_app_what_summary">What is this application?</string>
    <string name="preference_sub_userinfo_title">Personal information setting</string>
    <string name="preference_sub_userinfo_summary">Personal information setting</string>
    <string name="pref_user_sex_title">Sex</string>
    <string name="pref_user_sex_summary">Choose sex</string>
    <string name="pref_user_email_title">Email</string>
    <string name="pref_user_email_summary">Register Email.</string>
    <string name="pref_user_birth_title">Date of Birth</string>
    <string name="pref_user_birth_summary">Enter date of birth.</string>
    <string name="preference_setting_pwd_title">Lock setting</string>
    <string name="preference_lock_chk_title">Application lock setting</string>
    <string name="preference_lock_chk_summary">Application lock setting</string>
    <string name="preference_lock_chk_y">Application startup, you must enter the password.</string>
    <string name="preference_lock_chk_n">Not use lock function</string>
    <string name="preference_lock_password_title">Password setting</string>
    <string name="password_input_new">Enter new password.</string>
    <string name="password_not_equals">The password you entered does not match.</string>
    <string name="password_input_again">Please re enter the password.</string>
    <string name="password_set_success">New password has been set.</string>
    <string name="password_input_pw">Enter the password.</string>
    <string name="password_input_old">Enter previous password.</string>
    <string name="network_error">Please check network connection and try again.</string>
    <string name="error_message">Error occurred.\nPlease try again.</string>
    <string name="cant_find_url">Can not find the address you request.</string>
    <string name="closebtn">Close</string>
    <string name="refresh">Refresh</string>
    <string name="noti_back_finish">Will close if you click go back button again.</string>
    <string name="calling">Dial call</string>
    <string name="no_phone_num">Phone number does not exist.\nPlease check.</string>
    <string name="viewmap">View map</string>
    <string name="its_user_location">User location</string>
    <string name="its_shop_location">Participant location</string>
    <string name="showlog">View History/Statement</string>
    <string name="showservicemenu">Service/View menu</string>
    <string name="no_shop_info">No participant store information.</string>
    <string name="no_saved_shop_info">No saved participant store information.</string>
    <string name="no_mileage_info">No mileage information.</string>
    <string name="no_used_logs">No usage records.</string>
    <string name="scan_qr_help">Automatically detect barcode.</string>
    <string name="fail_scan_qr">QR code does not match.\nPlease try again.</string>
    <string name="settings_about_content">This application is to earn mileage.\n\nIn any participant store you could use one registed ID. \n\nYou do not need to carry many mileage cards. \n\nIts easy and simple to use with mobile application. \n\nEven though you delete application and re installed you could keep using it after confirmed.</string>
    <string name="not_yet">In preparation.</string>
    <string name="invalid_email">Invalid email address.</string>
    <string name="set_birth">Date of Birth setting</string>
    <string name="search">Search</string>
    <string name="mileage_noti">Carrot has been changed.</string>

    <string name="settings_about_what_is_carrot_text1">All new mobile carrot Service for saving-up bonus mileage </string>
    <string name="settings_about_what_is_carrot_text2">Enjoy your spending life, Even better smart mileage managing.</string>
    
    <string name="event_list">Event notification List</string>
    <string name="event_no_event_list">Not exist event information.</string>
    
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    
    <string name="agree">I agree</string>
    <string name="disagree">I do not agree</string>
    
    <string name="you_did_not_agree">You did not agree to the Terms and Conditions.</string>
    <string name="input_certi_4nums">Please enter the four-digit certification number.</string>
    <string name="certi_num_req_success">Requested certification number.Please enter the certification number.</string>
    <string name="certi_num_req_fail">Failed to request certification number.</string>
    <string name="certi_success">Authentication has been successful.</string>
    <string name="certi_fail">Authentication failed.</string>
    <string name="no_phone_num_info">No phone number information.</string>
    <string name="request_failed">Request has failed. Please try again.</string>
    
    <string name="agree_to_terms">I accept the Terms and Conditions.</string>
    <string name="see_terms">See Terms of use</string>
    <string name="agree_to_privacy_terms">Agree to the Privacy Policy.</string>
    <string name="see_privacy_terms">Privacy Policy</string>
    <string name="ok">O K</string>
    <string name="input_customer_phone_num">Enter your phone number</string>
    <string name="request_certi_num">Request Certificate No.</string>
    <string name="certi_num">Certificate No.</string>
    <string name="request_certify">Authentication requests</string>
    <string name="get_qr_by_phone_num">Get the QR code using your phone</string>
    
    <string name="my_location">My Location</string>
    <string name="shop_location">Merchant location</string>
     <string name="phone_number_ex">ex)010-1234-5678</string>
</resources>